--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="seperator2">
-       <h2>Login</h2>
+       <h2>Sign In</h2>
        <p class="message">
          Don't have an account ? <b style="color: blue">Create your account</b>, it takes less than a minute.
        </p>
@@ -73,7 +73,6 @@
 
          <table class="theTable">
             <tr>
-              <td class="check" style="color: black"><input type="checkbox" name="vehicle1" value="Bike">Remember</td>
               <td class="password"> Forgot Password?</td>
             </tr>
           </table>
