--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -47,6 +47,7 @@
     margin: 0 auto;
     margin-top: 200px;
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .seperator{
@@ -70,6 +71,7 @@
     font-size: 1.8em;
     position: relative;
     bottom: 20px;
+    color: white;
 }
 .seperator2{
     height: 50vh;
@@ -82,6 +84,7 @@ h1{
     font-weight: 100;
     padding-top: 100px;
     font-size: 2.3em; 
+    color: white
 
 }
 h2{
@@ -98,6 +101,7 @@ h3{
     padding-left: 10px;
     padding-right: 10px;
     padding-top: -30px;
+    color: white;
 }
 
 .message{
@@ -152,6 +156,7 @@ border: #20676e/ solid 2px;
 .password{
     /* border: #20676e solid 2px; */
     color: black;
+    padding-left: 10px;
 }
 
 .divButton{
