--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -6,6 +6,7 @@
     margin: 0 auto;
     margin-top: 200px;
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .seperator{
@@ -26,6 +27,7 @@
     font-size: 1.8em;
     position: relative;
     bottom: 20px;
+    color: white;
 }
 
 h1{
@@ -33,6 +35,7 @@ h1{
     text-align: center;
     padding-top: 100px;
     font-size: 2.3em; 
+    color: white;
 }
 
 h2{
@@ -49,7 +52,53 @@ h3{
     padding-left: 10px;
     padding-right: 10px;
     padding-top: -30px;
+    color: white;
 }
+
+.textfield{
+    width: 100%;
+    height: 50px;
+
+}
+
+.textfield input{
+    /* border: none; */
+    border-top: 2px;  
+    border-right: 0px;
+    border-left: 0px; 
+    border-color: #20676e;      
+    width: 70%;
+    height: 30px;
+    font-size: 1.2em;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.person{
+    height: 25px;
+    margin-right: -50px;
+    position: relative;
+    right: 25px;
+    top: 5px;
+}
+
+.theButton{
+    text-align: center;
+}
+
+.loginBtn{
+    height: 50px;
+    width: 90px;
+    border-radius: 40px;
+    color: white;
+    background-color: #20676e00;
+    border: white solid 3px;
+    margin-top: 20px;
+    font-size: 1em;
+
+}
+
+
 
 
 /* p{
