--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -80,10 +80,40 @@
         <h3>Welcome to the PinHome Database, please fill in the form to get started with adding your non-profit organisation
             to the database.</h3>
 
+            <div class="theButton">
+              <button class="loginBtn" (click)="goToSignIn()">Sign In</button>
+            </div>
+
       </div>
       <div class="seperator2">
         <h2>Register as an incorporator</h2>
+
+        <div class="textfield">
+            <input type="text" placeholder="First Name"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
+           </div>
+           <div class="textfield">
+              <input type="text" placeholder="Second Name"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
+             </div>
+             <div class="textfield">
+                <input type="text" placeholder="Organisation Name"><img class="person" src="../../assets/imgs/baseline_business_black_18dp.png">
+               </div>
+               <div class="textfield">
+                  <input type="email" placeholder="Email"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                 </div>
+                 <div class="textfield">
+                    <input type="number" placeholder="Mobile Number (+27)" min="1" max="10"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                   </div>
+                   <div class="textfield">
+                      <input type="number" placeholder="Tell. (+27)" min="1" max="10"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                     </div>
+                     <div class="textfield">
+                        <input type="password" placeholder="Password"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                       </div>
+                       <div class="textfield">
+                          <input type="password" placeholder="Confirm Pass."><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                         </div>
       </div>
+      
     </div>
 
   </body>
