--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -53,8 +53,7 @@
       <div class="seperator">
         <h1>Welcome</h1>
         <p>______</p>
-        <h3>What’s more friendly that a simple “hello”? This is probably the most common 
-          trend that I come across and is simply everywhere in designer portfolios these </h3>
+        <h3>We're super excited to have you on board!</h3>
       </div>
 
       <div class="seperator2">
