--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -51,7 +51,7 @@
   <body class="body">
     <div class="container">
       <div class="seperator">
-        <h1>Welcome</h1>
+        <h1>Welcome back!</h1>
         <p>______</p>
         <h3>We're super excited to have you on board!</h3>
       </div>
@@ -59,7 +59,7 @@
       <div class="seperator2">
        <h2>Sign In</h2>
        <p class="message">
-         Don't have an account ? <b style="color: blue">Create your account</b>, it takes less than a minute.
+         Don't have an account ? <b style="color: blue; font-weight: 100; text-decoration: underline">Create your account</b>, it takes less than a minute.
        </p>
 
        <div class="textfield">
