--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -32,27 +32,33 @@
   
     font-feature-settings: 'liga';
   }
-/* .body{
+.thebody{
     height: 100vh;
     width: 100vw;
-    margin-bottom: -2000px;
-    background-image: url('../../assets/imgs/thebackground.jpg')
-} */
+    margin-top: -500px; 
+    background-image: radial-gradient(rgba(119, 221, 212, 0.445),#073f44);
+    background-size: cover;
+     background-repeat: no-repeat; 
+     background-position: center; 
+   
+}
 
 .container{
     /* border: solid 2px grey; */
     box-shadow: 0 5px 20px grey;
-    height: 50vh;
+    height: 60vh;
     width: 50vw;
     margin: 0 auto;
     margin-top: 200px;
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    top: 100px;
 }
 
 .seperator{
     /* border: solid 1px grey; */
-    height: 50vh;
+    height: 60vh;
     width: 25vw; 
     background-image:linear-gradient(rgba(0, 0, 0, 0.445),#1e2a78),url('../../assets/imgs/bacckkkkk.jpg');
     background-attachment: fixed;
@@ -70,13 +76,14 @@
     text-align: center;
     font-size: 1.8em;
     position: relative;
-    bottom: 20px;
+    top: 80px;
     color: white;
 }
 .seperator2{
-    height: 50vh;
+    height: 60vh;
     width: 25vw; 
     /* border: solid red 2px; */
+    background-color: white;
 }
 
 h1{
@@ -84,15 +91,20 @@ h1{
     font-weight: 100;
     padding-top: 100px;
     font-size: 2.3em; 
-    color: white
+    color: white;
+    position: relative;
+    top: 80px;
+   
 
 }
 h2{
     color: rgb(134, 126, 126);
     text-align: left;
-    padding-left: 20px;
+    padding-left: 70px;
     font-size: 2em;
     padding-top: 30px;
+    position: relative;
+    top: 20px;
 }
 
 h3{
@@ -100,7 +112,7 @@ h3{
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: -30px;
+    padding-top: 150px;
     color: white;
 }
 
@@ -109,13 +121,16 @@ h3{
     padding-right: 17%;
     font-size: 1.2em;
     padding-bottom: -50px;
-    padding-left: 16px;
+    padding-left: 75px;
     /* border: solid 2px red; */
+    position: relative;
+    top: 50px;
 
 }
 .textfield{
     width: 100%;
     height: 50px;
+
 
 }
 .textfield input{
@@ -127,8 +142,8 @@ h3{
     width: 70%;
     height: 30px;
     font-size: 1.2em;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin-left: 73px;
+    margin-top: 80px;
 }
 .textfield i{
     /* position: absolute; */
@@ -156,18 +171,20 @@ border: #20676e/ solid 2px;
 .password{
     /* border: #20676e solid 2px; */
     color: black;
-    padding-left: 10px;
+    padding-left: 65px;
+    position: relative;
+   top: 90px;
 }
 
 .divButton{
    /* border: #1e2a78 solid 2px; */
    text-align: center;
-   margin-top: 50px;
+   margin-top: 140px;
    height: 10px;
 }
 .theBUTTON{
     height: 500%;
-    width: 200px;
+    width: 150px;
     border-radius: 50px;
     background-color: #20676e;
     color: white;
