--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
 
-  <!-- <div class="divver">
+<div class="divver">
         <div class="customAlert0">
         <div class="text">
           <img src="../../assets/imgs/custom alert/loader.gif" alt="" class="loading"><br>
@@ -13,7 +13,7 @@
       </div>
   </div>
 
-  <div class="content">
+   <!--  <div class="content">
     <div class="container">
       <div class="statement">
         <h1>Welcome</h1>
@@ -48,7 +48,7 @@
       Sign Up
     </div>
   </div> -->
-  <body class="body">
+  <body class="thebody">
     <div class="container">
       <div class="seperator">
         <h1>Welcome back!</h1>
@@ -59,25 +59,25 @@
       <div class="seperator2">
        <h2>Sign In</h2>
        <p class="message">
-         Don't have an account ? <b style="color: blue; font-weight: 100; text-decoration: underline">Create your account</b>, it takes less than a minute.
+         Don't have an account ? <b (click)="goToSignUp()" style="color: blue; font-weight: 100; text-decoration: underline">Create your account</b>, it takes less than a minute.
        </p>
 
        <div class="textfield">
-       <input type="text" placeholder="Username"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
+       <input #email type="email" placeholder="Email"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
       </div>
 
       <div class="textfield">
-          <input type="text" placeholder="Password"><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
+          <input #password type="password" placeholder="Password"><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
          </div>
 
          <table class="theTable">
             <tr>
-              <td class="password"> Forgot Password?</td>
+              <td class="password"> Forgot your Password?</td>
             </tr>
           </table>
 
           <div class="divButton" >
-              <button class="theBUTTON" (click)="goToSignUp()">Login</button>
+              <button class="theBUTTON" (click)="login(email.value,password.value, $event)">Login</button>
           </div>
       </div>
 
