--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -12,7 +12,7 @@
 .seperator{
     height: 60vh;
     width: 25vw; 
-    background-image:linear-gradient(rgba(0, 0, 0, 0.445),#1e2a78),url('../../assets/imgs/house.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.445),#1e2a78),url('../../assets/imgs/bacckkkkk.jpg');
     background-attachment: fixed;
 }
 
@@ -26,7 +26,7 @@
     text-align: center;
     font-size: 1.8em;
     position: relative;
-    bottom: 20px;
+    top: 25px;
     color: white;
 }
 
@@ -36,11 +36,13 @@ h1{
     padding-top: 100px;
     font-size: 2.3em; 
     color: white;
+    position: relative;
+    top: 30px;
 }
 
 h2{
     color: rgb(134, 126, 126);
-    padding-left: 20px;
+    padding-left: 50px;
     font-size: 2em;
     padding-top: 20px;  
 }
@@ -49,9 +51,9 @@ h3{
     font-weight: 100;
     font-weight: 100;
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: -30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 60px;
     color: white;
 }
 
@@ -70,7 +72,7 @@ h3{
     width: 70%;
     height: 30px;
     font-size: 1.2em;
-    margin-left: 70px;
+    margin-left: 73px;
     margin-top: 20px;
 }
 
@@ -84,17 +86,36 @@ h3{
 
 .theButton{
     text-align: center;
+    margin-top: 30px;
 }
 
 .loginBtn{
     height: 50px;
-    width: 90px;
+    width: 140px;
     border-radius: 40px;
     color: white;
     background-color: #20676e00;
     border: white solid 3px;
     margin-top: 20px;
     font-size: 1em;
+
+}
+
+.registerButton{
+    text-align: center;
+    margin-top: 33px;
+}
+
+.registerBtn{
+    background-color: #20676e;
+    height: 50px;
+    width: 140px;
+    color: white;
+    font-size: 1em;
+    border: #20676e 2px solid;
+    box-shadow: 0 0 20px #20676e;
+    border-radius: 100px;
+
 
 }
 
