--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -89,28 +89,32 @@
         <h2>Register as an incorporator</h2>
 
         <div class="textfield">
-            <input type="text" placeholder="First Name"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
+            <input type="text" placeholder="First Name" [(ngModel)]="fName"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
            </div>
            <div class="textfield">
-              <input type="text" placeholder="Second Name"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
+              <input type="text" placeholder="Second Name" [(ngModel)]="sName"><img class="person" src="../../assets/imgs/1x/baseline_person_black_18dp.png">
              </div>
              <div class="textfield">
-                <input type="text" placeholder="Organisation Name"><img class="person" src="../../assets/imgs/baseline_business_black_18dp.png">
+                <input type="text" placeholder="Organisation Name" [(ngModel)]="orgName"><img class="person" src="../../assets/imgs/baseline_business_black_18dp.png">
                </div>
                <div class="textfield">
-                  <input type="email" placeholder="Email"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+                  <input type="email" placeholder="Email" [(ngModel)]="email"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
                  </div>
                  <div class="textfield">
-                    <input type="number" placeholder="Mobile Number (+27)" min="1" max="10"><img class="person" src="../../assets/imgs/baseline_phone_black_18dp.png">
+                    <input type="number" placeholder="Mobile Number (+27)" min="1" max="10" [(ngModel)]="mobile"><img class="person" src="../../assets/imgs/baseline_phone_black_18dp.png">
                    </div>
                    <div class="textfield">
-                      <input type="number" placeholder="Tell. (+27)" min="1" max="10"><img class="person" src="../../assets/imgs/baseline_phone_black_18dp.png">
+                      <input type="number" placeholder="Tell. (+27)" [(ngModel)]="tel" min="1" max="10"><img class="person" src="../../assets/imgs/baseline_phone_black_18dp.png">
                      </div>
                      <div class="textfield">
-                        <input type="password" placeholder="Password"><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
+                        <input type="password" placeholder="Password" [(ngModel)]="password"><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
                        </div>
                        <div class="textfield">
-                          <input type="password" placeholder="Confirm Pass."><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
+                          <input type="password" placeholder="Confirm Pass." [(ngModel)]="Confirm"><img class="person" src="../../assets/imgs/baseline_lock_black_18dp.png">
+                         </div>
+
+                         <div class="registerButton">
+                           <button class="registerBtn" (click)="register($event)">Register</button>
                          </div>
       </div>
       
