--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,4 +1,152 @@
-.content{
+.container{
+    /* border: grey solid 2px; */
+    margin: 0 auto;
+    width: 46vw;
+    height: 80vh;
+    margin-top: 100px;
+    box-shadow: 0 0 20px grey;
+    font-family: Arial, Helvetica, sans-serif;
+    
+   
+}
+
+
+
+/* .theCol{ */
+    /* border: solid 2px blue; */
+    /* height: 25vh;
+    width: 30vw; */
+/* } */
+
+.theImage{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid #20676e 5px;
+    margin-top: 150px;
+    margin-left: 10px;
+    
+}
+
+.cover{
+    width: 45.9vw;
+    border: solid #20676e 2px;
+    background-image: url('../../assets/imgs/default-cover.jpg');
+    background-repeat: no-repeat; 
+    background-size: cover;
+    height: 25vh;
+    
+}
+
+h2{
+    color: white;
+    text-align: center;
+    font-weight: 100;
+    text-shadow: 0 0 10px black;
+
+}
+
+.seperator{
+    border: #20676e solid 2px;
+    width: 22.8vw;
+    height: 54.3vh;
+    float: left;
+}
+.seperator2{
+    border: #20676e solid 2px;
+    width: 22.8vw;
+    height: 54.3vh;
+    float: right;
+}
+
+h1{
+    text-align: center;
+    font-weight: 100;
+    color: rgb(78, 75, 75);
+    padding-top: 50px;
+}
+.textfield{
+    width: 100%;
+    height: 50px;
+
+
+}
+.textfield input{
+    /* border: none; */
+    border-top: 2px;  
+    border-right: 0px;
+    border-left: 0px; 
+    border-color: #20676e;      
+    width: 70%;
+    height: 30px;
+    font-size: 1.2em;
+    margin-left: 73px;
+    margin-top: 10px;
+}
+.person{
+    height: 25px;
+    margin-right: -50px;
+    position: relative;
+    right: 25px;
+    top: 5px;
+}
+
+.theDescription{
+    border: #20676e solid 2px;
+    width: 69%;
+    margin-left: 73px;
+    margin-top: 10px;
+    height: 140px; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
+
+/* .theTabel{
+    
+    margin: 0 auto;
+    width: 22.8vw;
+    height: 54.3vh;
+}
+
+.firstRow{
+    background: #20676e;
+    height: 20%;
+    width: 20px;
+} */
+
+table{
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 54.3vh;
+}
+tr{
+    /* border: 2px solid green; */
+    width: 75%;
+    height: 20px;
+}
+td{
+    /* border: 2px solid orange; */
+    width: 20px;
+}
+
+.thePicture{
+    height: 190px;
+    width: 200px;
+    z-index: 1000000;
+    padding-left: 70px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* .content{
     height: 90vh;
     overflow-y: scroll;
     width: 101.5vw;
@@ -14,10 +162,10 @@
     position: absolute;
     color: black;
     width: 60vw;
-    height: 108vh;
+    height: 108vh; */
     /* border: 8px solid #20676e; */
     /* margin-left: 20vw; */
-    left: 50%;
+    /* left: 50%;
     transform: translateX(-53%);
     background-color: rgba(225, 226, 224, 0);
     box-shadow: 0px 30px 30px #ffff; 
@@ -47,9 +195,9 @@ h1{
     border-radius: 250px;
     border: #0f808d96 5px solid;
 }
-.bar{
+.bar{ */
     /* height: vh; */
-    background-color: #20676e;
+    /* background-color: #20676e;
     position: relative;
     top: 20px;
 }
@@ -60,15 +208,15 @@ p{
     color: rgb(0, 0, 0);
     padding: 10px
 }
-.whole{
+.whole{ */
     /* border: solid 2px #20676e; */
-    width: 40vw;
+    /* width: 40vw;
     position: relative;
     top: 10px;
 }
-.whole2{
+.whole2{ */
     /* border: solid 2px #20676e; */
-    width: 40vw;
+    /* width: 40vw;
     position: relative;
     bottom: 50px;
 }
@@ -93,32 +241,32 @@ td{
     position: relative;
     left: 12px;
 }
-table{
+table{ */
     /* border: 2px solid red; */
-    width: 100%;
-}
-.leftTD{
+    /* width: 100%;
+} */
+/* .leftTD{
     width: 40%;
-    padding-left: 200px;
+    padding-left: 200px; */
     /* border: solid 2px red; */
     /* font-size: 1.2em; */
-}
-.rightTD{
-    padding-left: 200px;
+/* }
+.rightTD{ */
+    /* padding-left: 200px; */
     /* font-size: 1.2em; */
-}
-td{
+/* } */
+/* td{
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 1.2em
+    font-size: 1.2em */
     /* border: 2px solid green; */
-}
+/* }
 .coverPic{
     width: 100%;
     height: 250px;
-    object-fit: cover;
+    object-fit: cover; */
     /* border: #20676e solid 2px; */
-}
+/* }
 .round2{
     width: 150px;
     height: 150px;
@@ -126,9 +274,9 @@ td{
     position: relative;
     bottom: 50px;
 }
-.logo{
+.logo{ */
     /* border: #20676e solid */
-}
+/* }
 @media screen and (max-width : 500px){
     .content{
         height: 140vh;
@@ -146,10 +294,10 @@ td{
         position: absolute;
         color: black;
         width: 109%;
-        height: 125vh;
+        height: 125vh; */
         /* border: 8px solid #20676e; */
         /* margin-left: 20vw; */
-        left: 53%;
+        /* left: 53%;
         transform: translateX(-53%);
         background-color: rgba(225, 226, 224, 0.527);
         position: relative;
@@ -167,9 +315,9 @@ td{
         font-weight: 100;
     }
     
-    .round{
+    .round{ */
         /* border: solid 8px #20676e6e; */
-        width: 100px;
+        /* width: 100px;
         height: 100px;
         border-radius: 250px;
     }
@@ -180,9 +328,9 @@ td{
         border-radius: 250px;
     }
     
-    .bar{
+    .bar{ */
         /* height: vh; */
-        background-color: #20676e;
+        /* background-color: #20676e;
         position: relative;
         top: 20px;
     }
@@ -195,18 +343,18 @@ td{
         padding: 10px
     }
     
-    .whole{
+    .whole{ */
         /* border: solid 2px #20676e; */
-        width: 100vw;
+        /* width: 100vw;
         position: relative;
         top: 10px;
     }
-    .whole2{
+    .whole2{ */
       /* border: solid 2px #20676e; */
-      width: 100vw;
-      position: relative;
+      /* width: 100vw;
+      position: relative; */
       /* border: 2px solid red; */
-      top: -40px;
+      /* top: -40px;
     }
     .title{
         font-size: 1em;
@@ -222,11 +370,11 @@ td{
     .coverPic{
         width: 100%;
         height: 190px;
-        object-fit: cover;
+        object-fit: cover; */
         /* border: #20676e solid 2px; */
-    }
+    /* } */
     
-    .round2{
+    /* .round2{
         width: 120px;
         height: 120px;
         border-radius: 250px;
@@ -234,8 +382,8 @@ td{
         bottom: 50px;
     }
     
-    .logo{
+    .logo{ */
         /* border: #20676e solid */
-    }
+    /* }
     
-}
+} */
