--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<!-- <div class="content">
     <h1>
         Your Business Details
       </h1>
@@ -105,5 +105,57 @@
   </table>
 </div>
 
+</div> -->
+
+
+
+
+<body>
+  <div class="container">
+    <div class="cover">
+      <h2>Edit your gallery images.</h2>
+      <div class="round">
+        <img class="theImage" src="../../assets/imgs/thebrownlogo.jpg">
+      </div>
+   </div>
+   <div class="seperator">
+    <h1>Edit your Business Profile</h1>
+    <div class="textfield">
+        <input #email type="text" placeholder="Organisation Name"><img class="person" src="../../assets/imgs/baseline_business_black_18dp.png">
+       </div>
+       <div class="textfield">
+          <input #email type="text" placeholder="Organisation Type"><img class="person" src="../../assets/imgs/baseline_business_black_18dp.png">
+         </div>
+         <div class="textfield">
+            <input #email type="email" placeholder="Email"><img class="person" src="../../assets/imgs/baseline_email_black_18dp.png">
+           </div>
+           <div class="textfield">
+              <input #email type="number" placeholder="Phone No."><img class="person" src="../../assets/imgs/baseline_phone_black_18dp.png">
+             </div>
+             <div class="textfield">
+                <input #email type="email" placeholder="Physical Address"><img class="person" src="../../assets/imgs/baseline_location_on_black_18dp.png">
+               </div>
+               <textarea class="theDescription" placeholder="Description" maxlength="230" id="about" type="text"></textarea>
+   </div>
+   <div class="seperator2">
+    <table class="theTabel">
+      <tr>
+        <td class="firstRow">
+          <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
+        </td>
+      </tr>
+      <tr>
+        <td>
+            <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
+        </td>
+      </tr>
+      <tr>
+        <td>
+            <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
+        </td>
+      </tr>
+    </table>
+   </div>
 </div>
 
+</body>
