--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -1,513 +1,125 @@
-@font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://example.com/MaterialIcons-Regular.eot);
-    src: local('Material Icons'),
-      local('MaterialIcons-Regular'),
-      url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-      url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-      url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
-  }
-.material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;  
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: wrap;
-    direction: ltr;
-    position: absolute;
-    left: 5px;
-    top: 3px;
-
-    /* margin-top: 15px; */
-  
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-  
-    -moz-osx-font-smoothing: grayscale;
-  
-    font-feature-settings: 'liga';
-  }
-.thebody{
-    height: 100vh;
+.maindiv{
+    height: 130vh;
     width: 100vw;
-    margin-top: -500px; 
-    background-image: radial-gradient(rgba(119, 221, 212, 0.445),#073f44);
+    margin-top: -300px; 
+    background-image:linear-gradient(rgba(12, 33, 43, 0.5),rgba(16, 60, 78, 0.685)),url('../../assets/imgs/tree.jpg');
+    /* background: linear-gradient(rgba(13, 32, 41, 0.281),rgba(5, 59, 77, 0.904)),url('../../assets/imgs/default-cover.jpg'); */
     background-size: cover;
-     background-repeat: no-repeat; 
-     background-position: center; 
-   
+    background-repeat: no-repeat; 
+     background-position: top; 
+     overflow-y:hidden;
+     overflow-x:hidden;
+     position: fixed;
+     margin-left: -15px;
 }
-
-.container{
-    /* border: solid 2px grey; */
-    box-shadow: 0 5px 20px grey;
-    height: 60vh;
-    width: 50vw;
-    margin: 0 auto;
-    margin-top: 200px;
+.box{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    top: 100px;
 }
-
-.seperator{
-    /* border: solid 1px grey; */
-    height: 60vh;
-    width: 25vw; 
-    background-image:linear-gradient(rgba(0, 0, 0, 0.445),#1e2a78),url('../../assets/imgs/bacckkkkk.jpg');
-    background-attachment: fixed;
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-    
-
-    /* background-attachment: fixed;
-    background-color: rgba(94, 10, 10, 0.74);
-    background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center; */
-}
-.seperator p{
-    text-align: center;
-    font-size: 1.8em;
-    position: relative;
-    top: 80px;
-    color: white;
-}
-.seperator2{
-    height: 60vh;
-    width: 25vw; 
-    /* border: solid red 2px; */
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 650px;
+    padding: 10px;
+    height: 650px; /* Should be removed. Only for demonstration */
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: white;
+    
 }
-
-h1{
-    text-align: center;
-    font-weight: 100;
-    padding-top: 100px;
-    font-size: 2.3em; 
-    color: white;
-    position: relative;
-    top: 80px;
-   
-
+.column1{
+    
+    background-image: url('../../assets/imgs/tree.jpg');
+    float: left;
+    width: 650px;
+    padding: 10px;
+    height: 650px; /* Should be removed. Only for demonstration */
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat; 
 }
-h2{
-    color: rgb(134, 126, 126);
-    text-align: left;
-    padding-left: 70px;
-    font-size: 2em;
-    padding-top: 30px;
-    position: relative;
-    top: 20px;
-}
+  
+  /* Clear floats after the columns */
+  .row {
+    content: "";
+    display: table;
+    clear: both;
+    box-shadow: 0 0 10px
+  
+  }
+  h1{
+      font-weight: 100;
+      color: white;
+      font-size: 3.8em;
+  }
+  h2{
+      text-align: left;
+      width: 80%;
+      font-size: 2.5em;
+      color: #666969;
 
-h3{
-    font-weight: 100;
-    text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 150px;
-    color: white;
-}
+  }
 
-.message{
-    color: black;
-    padding-right: 17%;
-    font-size: 1.2em;
-    padding-bottom: -50px;
-    padding-left: 75px;
-    /* border: solid 2px red; */
-    position: relative;
-    top: 50px;
+  h3{
+      font-size: 1.5em; 
+      font-weight: 100;
+      color: white;
+      text-shadow: 0 0 10px black;
+  }
+  p{
+      width: 80%;
+      text-align: center;
+      color: white;
+      /* font-size: 1.8em; */
+  } 
+  .column p{
+      color: black;
+      font-size: 1.2em;
+  }
+  input{
+      width: 80%;
+      min-width: 300px;
+      margin: 9px;
+      height: 25px;
+      border-bottom: 2px #20676e solid;
+      background-color: rgba(255, 255, 255, 0);
+      border-left: 0px;
+      border-right: 0px;
+      border-top: 0px;
+      font-size: 1.3em;
+    
+  }
+  button{
+      height: 45px;
+      width: 100px;
+      border: #20676e 2px solid;
+      border-radius: 100px;
+      background-color: white;
+      color:#20676e
+  }
 
-}
-.textfield{
-    width: 100%;
-    height: 50px;
-
-
-}
-.textfield input{
-    /* border: none; */
-    border-top: 2px;  
-    border-right: 0px;
-    border-left: 0px; 
-    border-color: #20676e;      
-    width: 70%;
-    height: 30px;
-    font-size: 1.2em;
-    margin-left: 73px;
-    margin-top: 80px;
-}
-.textfield i{
-    /* position: absolute; */
-    color: green
-}
-
-.person{
+  .person{
     height: 25px;
     margin-right: -50px;
     position: relative;
     right: 25px;
     top: 5px;
 }
-
-.theTable{
-    margin-right: 100px;
-    z-index: 100000;
-    width: 100%;
-    margin-top: 30px;
-    margin-left: 10px;
-}
-.check{
-border: #20676e/ solid 2px;
-}
-.password{
-    /* border: #20676e solid 2px; */
-    color: black;
-    padding-left: 65px;
-    position: relative;
-   top: 90px;
-}
-
-.divButton{
-   /* border: #1e2a78 solid 2px; */
-   text-align: center;
-   margin-top: 140px;
-   height: 10px;
-}
-.theBUTTON{
-    height: 500%;
-    width: 150px;
-    border-radius: 50px;
-    background-color: #20676e;
-    color: white;
-    border: 2px solid #20676e;
-    box-shadow: #20676e 0 0 20px;
-    font-size: 1em;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* p{
-    position: relative;
-
-    margin-top:10px;
-}
-.theTable{
-    position: relative;
-    left:45px
-
-}
-h3{
-    color: #136a74;
-    font-weight: 100;
-}
-.content{
-    height: 86.4vh;
-    width: 101.5%;
-    position: relative;
-    right: 20px;
-    background-image: url('../../assets/imgs/theHand.jpg');
-    background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center;  
-}
-.statement{
-    transition: 400ms;
-    padding: 15px;
-    position: relative;
-    top: 40px;
-        color: whitesmoke;
-        text-shadow: 0px 0px 10px black;
-        
-    }
-
-.container{
-    height: 50px;
-    position: absolute;
-    color:black;
-    /* border: 2px solid black; */
-    /* left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    max-width: 720px; 
-    text-align: center;
-    margin-top: 20px;
-    transition: 400ms;
-    
-} */
-/* .iForgot{
-    padding-top: 10px;
-}
-
-.form{
-    background: rgba(245, 245, 245, 0.63);
-    width: 90%;
-    max-width:650px;
-    color: black;
-    position: relative;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px grey;
-    transition: 400ms;
-    margin-top: 85px;
-    box-shadow: 10px 10px 0 #136a749d
-}
-.text-field{
-    transition: 1s;
-    width: 100%;
-    max-width: 310px;
-    margin-top: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 5px;
-    border-radius: 50px;
-    transition: 400ms;
-    border: 1px solid #136a74;
-    background-color: #84919265;
-    color: black;
-    
-}
-.intro{
-    transition: 400ms;
-    width: 100%;
-}
-.theH3{
-    font-weight: bold;
-
-}
-.space{
-    height: 10px;
-}
-.button{
-    width: 100%;
-    max-width: 310px;
-    height: 40px;
-    background: #136a74;
-    margin-top: 25px;
-    color: white;
-    font-weight: bolder;
-    border-radius: 50px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.507);
-    transition: 400ms;
-    margin: 0 auto;
-    padding-top: 2px;
-    font-weight: 100
-}
-.button:active{
-    width: 100%;
-    max-width: 310px;
-    height: 40px;
-    background: #094349;
-    margin-top: 25px;
-    color: white;
-    font-weight: bolder;
-    border-radius: 50px;
-    transition: 400ms;
-    margin: 0 auto;
-    padding-top: 2px;
-    font-weight: 100
-}
-a{
-    text-align: center;
-    margin: 0 auto;
-    transition: 400ms;
-    padding-top: 15px;
-}
-
-@media screen and (max-width: 420px){
-
-    .content{
-        height: 100vh;
-        width: 109vw;
-        position: relative;
-        right: 25px;
-        background-image: url('../../assets/imgs/theHand.jpg');
-        background-attachment: fixed;
-        background-size: cover;
-       background-repeat: no-repeat;
-       background-position: center;  
-    }
-
-    .form{
-        background: rgba(245, 245, 245, 0.63);
-        width: 90%;
-        max-width:650px;
-       
-        color: black;
-        position: relative;
-        margin: 0 auto;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 10px;
-        border-radius: 5px;
-        box-shadow: 0 10px 10px #136a749d;
-        transition: 400ms;
-        margin-top: 70px;
-    }
-
-}
-
-.holder{
-    z-index: 1;
-    height: 0;
-    /* border: 2px solid red; */
-    /* width: 99vw;
-    transform: translateX(1.01vw);
-    position: absolute;
-    bottom: -60vh;
-}
-.buttonClick{
-    position: absolute;
-    left: 50%;
-    top: 100vh;
-    transform: translateX(-68%);
-    top: 5px;
-    width: 100%;
-    max-width: 150px;
-    background: #094349;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.486);
-    text-align: center;
-    transition: 200ms;
-}
-.buttonClick:active{
-    position: absolute;
-    left: 50%;
-    top: 100vh;
-    transform: translateX(-68%);
-    top: 5px;
-    width: 100%;
-    max-width: 150px;
-    background: #096c77;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.486);
-    text-align: center;
-}
-
-.or{
-    width: 20px;
-    text-align: center;
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-180%);
-    text-shadow: 0 0 5px black;
-    font-weight: bolder;
-}
-.divver{
-    height: 0px;
-}
-
-.customAlert0{
-    z-index: 100000;
-    position: absolute;
-    background: whitesmoke;
-    width: 55%;
-    height: 15vh;
-    color: #222;
-    position: relative;
-    top: 50%;
-    left: -100%;
-    box-shadow: 0 5px 15px grey;
-    transition: 300ms;
-    border-radius: 5px;
-    border: 2px solid rgba(0, 0, 0, 0.651);
-}
-.text{
-    position: relative;
-    top: 35%;
-    transform: translateY(-50%);
-    text-align: center;
-    font-weight: bold;
-}
-.confirmer{
-    width: 50px;
-    height: 50px;
-    background: #136a74;
-    border-radius: 5px;
-    transition: 300ms;
-    position: absolute;
-    right: 50%;
-    transform: translateX(50%);
-    bottom: 10px;
-    box-shadow: 0 5px 15px grey;
-}
-.confirmer:active{
-    width: 50px;
-    height: 50px;
-    background: #0f808d;
-    border-radius: 5px;position: absolute;
-    right: 50%;
-    transform: translateX(50%);
-    bottom: 10px;
-    box-shadow: 0 5px 10px black;
-}
-.OK{
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    font-weight: bolder;
-    color: white;
-
-}
-
-.holder{
-    z-index: 1;
-    height: 0;
-  
-    width: 99vw;
-    transform: translateX(1.01vw);
-    position: absolute;
-    bottom: -61vh;
-}
-.loading{
-    height: 120px;
-    margin: 0 auto;
-    display: none;
-}
-.forgot{
-    background: transparent;
-    color: #045f69;
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-    text-decoration: underline;
-    font-weight: bold;
-    padding-top: 5px;
-    padding-bottom: 0.1px;
-}  */ 
