--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -110,76 +110,84 @@
 
 
 <head>
-    <link rel="stylesheet" href="/path/to/material-icons/iconfont/material-icons.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="thebody">
   <div class="container">
     <div class="cover">
-        <!-- <div class="SaveButton">
+      <!-- <div class="SaveButton">
             <button class="saveBtn">Save</button>
           </div> -->
       <h2>Your cover picture</h2>
       <div class="round">
         <img class="theImage" src="../../assets/imgs/thebrownlogo.jpg">
       </div>
-   </div>
-   <div class="seperator">
-    <h1>Edit your Business Profile</h1>
-    <div class="textfield">
-        <input #email type="text" placeholder="Organisation Name"><img class="person" src="../../assets/imgs/baseline_business_white_18dp.png">
-       </div>
-       <div class="textfield">
-          <input #email type="text" placeholder="Organisation Type"><img class="person" src="../../assets/imgs/baseline_business_white_18dp.png">
-         </div>
-         <div class="textfield">
-            <input #email type="email" placeholder="Email"><img class="person" src="../../assets/imgs/baseline_email_white_18dp.png">
-           </div>
-           <div class="textfield">
-              <input #email type="number" placeholder="Phone No."><img class="person" src="../../assets/imgs/baseline_call_white_18dp.png">
-             </div>
-             <div class="textfield">
-                <input #email type="email" placeholder="Physical Address"><img class="person" src="../../assets/imgs/baseline_location_on_white_18dp.png">
-               </div>
-               <textarea class="theDescription" placeholder="Description" maxlength="230" id="about" type="text"></textarea>
+    </div>
+    <div class="seperator">
+      <h1>Edit your Business Profile</h1>
+      <div class="textfield">
+        <input #email type="text" placeholder="Organisation Name">
+        <i style=" color: white;height: 30px; position: relative; left: -25px;" class="person" class="material-icons">business</i>
+      </div>
+      <div class="textfield">
+        <input #email type="text" placeholder="Organisation Type">
+        <i style=" color: white;height: 30px; position: relative; left: -25px;" class="person" class="material-icons">business</i>
+      </div>
+      <div class="textfield">
+        <input #email type="email" placeholder="Email">
+        <i style=" color: white;height: 30px; position: relative; left: -25px;" class="person" class="material-icons">mail</i>
+      </div>
+      <div class="textfield">
+        <input #email type="number" placeholder="Phone No.">
+        <i style=" color: white;height: 30px; position: relative; left: -25px;" class="person" class="material-icons">phone</i>
+      </div>
+      <div class="textfield">
+        <input #email type="email" placeholder="Physical Address">
+        <i style=" color: white;height: 30px; position: relative; left: -25px;" class="person" class="material-icons">
+          location_on</i>
+      </div>
+      <textarea class="theDescription" placeholder="Description" maxlength="230" id="about" type="text"></textarea>
 
-               <div class="SaveButton">
-            <button class="saveBtn">Save</button>
-          </div>
-   </div>
-   <div class="seperator2">
-     <h1 class="theH1">Organisation braches  <button class="BranchButton" (click)="addBrunch()">Add Brunch</button></h1>
-   
-    <table class="theTabels">
-       
-      <tr>
-        <td>
-          <p>Soweto</p>
-          <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
-        </td>
-        <td>
-          <p>Pretoria</p>
-            <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
-        </td>
-        <td>
-          <p>Cape Town</p>
-            <img class="thePicture" src="../../assets/imgs/kid.jpg"> 
-        </td>
-      </tr>
-      <tr>
-        <td>
-            <img class="thePicture2" src="../../assets/imgs/kid.jpg"> 
-        </td>
-        <td>
-            <img class="thePicture2" src="../../assets/imgs/kid.jpg"> 
-        </td>
-        <td>
-            <img class="thePicture2" src="../../assets/imgs/kid.jpg"> 
-        </td>
-      </tr>
-      
-    </table>
+      <div class="SaveButton">
+        <button class="saveBtn">Save</button>
+      </div>
+    </div>
+    <div class="seperator2">
+      <div class="theADDBtn">
+        <button class="BranchButton">
+          <i style="color: #2c747a; position: relative;right: 0px;" class="material-icons">add</i>Add Brunch</button>
+      </div>
+      <h1 class="theH1">Organisation Braches</h1>
+      <div class="rightPortion">
+        <div class="imgContainer">
+          <h4>Image</h4>
+          <img src="../../assets/imgs/240_F_233133706_NzmdCQbbF11d9LUp2uxY2xulLOBC2uyG.jpg" alt="" class="thePicture2">
 
-   </div>
-</div>
+        </div>
+        <div class="imgContainer">
+          <h4>Image</h4>
+          <img src="../../assets/imgs/240_F_233133706_NzmdCQbbF11d9LUp2uxY2xulLOBC2uyG.jpg" alt="" class="thePicture2">
+
+        </div>
+        <div class="imgContainer">
+          <h4>Image</h4>
+          <img src="../../assets/imgs/240_F_233133706_NzmdCQbbF11d9LUp2uxY2xulLOBC2uyG.jpg" alt="" class="thePicture2">
+
+        </div>
+        <div class="imgContainer">
+          <h4>Image jjhksdfgh sdfjghk sdfigh sdiofgh</h4>
+          <img src="../../assets/imgs/240_F_233133706_NzmdCQbbF11d9LUp2uxY2xulLOBC2uyG.jpg" alt="" class="thePicture2">
+
+        </div>
+        <div class="imgContainer">
+          <h4>Image</h4>
+          <img src="../../assets/imgs/240_F_233133706_NzmdCQbbF11d9LUp2uxY2xulLOBC2uyG.jpg" alt="" class="thePicture2">
+
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 </body>
