--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -123,3 +123,276 @@
     right: 25px;
     top: 5px;
 }
+
+@media screen and (min-width: 768px){
+   @media screen and (max-width: 1024px){
+
+    .maindiv{
+        height: 130vh;
+        width: 100vw;
+        margin-top: -300px; 
+        background-image:linear-gradient(rgba(12, 33, 43, 0.5),rgba(16, 60, 78, 0.685)),url('../../assets/imgs/tree.jpg');
+        /* background: linear-gradient(rgba(13, 32, 41, 0.281),rgba(5, 59, 77, 0.904)),url('../../assets/imgs/default-cover.jpg'); */
+        background-size: cover;
+        background-repeat: no-repeat; 
+         background-position: top; 
+         overflow-y:hidden;
+         overflow-x:hidden;
+         position: fixed;
+         margin-left: -15px;
+    }
+    .box{
+        /* position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif; */
+        margin-left: 140px;
+        margin-top: 150px;
+    }
+    * {
+        box-sizing: border-box;
+      }
+      
+      /* Create two equal columns that floats next to each other */
+      .column {
+        float: left;
+        width: 500px;
+        padding: 10px;
+        height: 600px; /* Should be removed. Only for demonstration */
+        /* text-align: center; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: white;
+        
+    }
+    .column1{
+        
+        background-image: url('../../assets/imgs/tree.jpg');
+        float: left;
+        width: 500px;
+        padding: 10px;
+        height: 550px; /* Should be removed. Only for demonstration */
+        /* text-align: center; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-size: cover;
+        background-repeat: no-repeat; 
+    }
+      
+      /* Clear floats after the columns */
+      .row {
+        content: "";
+        display: table;
+        clear: both;
+        box-shadow: 0 0 10px
+      
+      }
+      h1{
+          font-weight: 100;
+          color: white;
+          font-size: 3.8em;
+      }
+      h2{
+          text-align: left;
+          width: 80%;
+          font-size: 2.5em;
+          color: #666969;
+    
+      }
+    
+      h3{
+          font-size: 1.5em; 
+          font-weight: 100;
+          color: white;
+          text-shadow: 0 0 10px black;
+      }
+      p{
+          width: 84%;
+          text-align: center;
+          color: white;
+          /* font-size: 1.8em; */
+      } 
+      .column p{
+          color: black;
+          font-size: 1.2em;
+      }
+      input{
+          width: 80%;
+          min-width: 300px;
+          margin: 9px;
+          height: 25px;
+          border-bottom: 2px #20676e solid;
+          background-color: rgba(255, 255, 255, 0);
+          border-left: 0px;
+          border-right: 0px;
+          border-top: 0px;
+          font-size: 1.3em;
+        
+      }
+      button{
+          height: 45px;
+          width: 100px;
+          border: #20676e 2px solid;
+          border-radius: 100px;
+          background-color: white;
+          color:#20676e
+      }
+    
+      .person{
+        height: 25px;
+        margin-right: -50px;
+        position: relative;
+        right: 25px;
+        top: 5px;
+    }
+
+   }
+}
+
+@media screen and (min-width: 320px){
+    @media screen and (max-width: 450px){
+        .maindiv{
+            height: 150vh;
+            width: 100vw;
+            margin-top: -300px; 
+            background-image:linear-gradient(rgba(12, 33, 43, 0.5),rgba(16, 60, 78, 0.685)),url('../../assets/imgs/tree.jpg');
+            /* background: linear-gradient(rgba(13, 32, 41, 0.281),rgba(5, 59, 77, 0.904)),url('../../assets/imgs/default-cover.jpg'); */
+            background-size: cover;
+            background-repeat: no-repeat; 
+             background-position: top; 
+             overflow-y:hidden;
+             overflow-x:hidden;
+             position: fixed;
+             margin-left: -15px;
+        }
+        .box{
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            margin-left: 20px;
+            margin-top: 200px;
+        }
+        * {
+            box-sizing: border-box;
+          }
+          
+          /* Create two equal columns that floats next to each other */
+          .column {
+            float: left;
+            width: 400px;
+            padding: 10px;
+            height: 350px; /* Should be removed. Only for demonstration */
+            /* text-align: center; */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-color: white;
+            
+        }
+        .column1{
+            
+            background-image: url('../../assets/imgs/tree.jpg');
+            float: left;
+            width: 400px;
+            padding: 10px;
+            height: 360px; /* Should be removed. Only for demonstration */
+            /* text-align: center; */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-size: cover;
+            background-repeat: no-repeat; 
+        }
+          
+          /* Clear floats after the columns */
+          .row {
+            content: "";
+            display: table;
+            clear: both;
+            box-shadow: 0 0 10px
+          
+          }
+          h1{
+              font-weight: 100;
+              color: white;
+              font-size: 3em;
+          }
+          h2{
+              text-align: left;
+              width: 80%;
+              font-size: 1.8em;
+              color: #666969;
+        
+          }
+        
+          h3{
+              font-size: 1em; 
+              font-weight: 100;
+              color: white;
+              text-shadow: 0 0 10px black;
+          }
+          p{
+              width: 80%;
+              text-align: center;
+              color: white;
+              /* font-size: 1.8em; */
+          } 
+          .column p{
+              color: black;
+              font-size: 1em;
+              position: relative;
+              right: 20px;
+              bottom: 20px;
+              
+          }
+          input{
+              width: 80%;
+              min-width: 300px;
+              margin: 0px;
+              height: 20px;
+              border-bottom: 2px #20676e solid;
+              background-color: rgba(255, 255, 255, 0);
+              border-left: 0px;
+              border-right: 0px;
+              border-top: 0px;
+              font-size: 1em;
+             
+            
+          }
+          button{
+              height: 45px;
+              width: 100px;
+              border: #20676e 2px solid;
+              border-radius: 100px;
+              background-color: white;
+              color:#20676e
+          }
+        
+          .person{
+            height: 25px;
+            margin-right: -50px;
+            position: relative;
+            right: 25px;
+            top: 5px;
+        }
+
+    }
+}
+
